hot fix swagger docs
